<resources>
    <string name="app_name">CryptoWatcher</string>
    <string name="cryptowatcher">CryptoWatcher</string>
    <string name="graph_not_avaliable">График для этой валютной пары недоступен</string>
    <string name="no_internet_connection">Отсутствует интернет подключение!</string>
    <string name="splash_screen_try_again_button">Попробовать снова</string>
    <string name="attention_msg">Внимание!</string>
    <string name="delete_notification_qstn_msg">Удалить оповещение?</string>
    <string name="update_unnecessary_msg">Обновление не требуется</string>
    <string name="news_menu_item_text">Новости</string>
    <string name="alarms_menu_item_text">Будильники</string>
    <string name="menu_markets_avaliable_text">Доступные биржи</string>
    <string name="bittrex_text">Bittrex</string>
    <string name="exmo_text">Exmo</string>
    <string name="coinmarketcap_text">Coinmarketcap</string>
    <string name="loading_pls_wait_text">Загружаю. Подождите...</string>
    <string name="updated_at_text">Обновлено:</string>
    <string name="monthly_chart_text">Месячный график</string>
    <string name="weekly_chart_text">Недельный график</string>
    <string name="daily_chart_text">Дневной график</string>
    <string name="details_week_change_text">За неделю</string>
    <string name="details_price_in_btc_text">Цена в биткоинах</string>
    <string name="details_marketcap_text">Капитализация:</string>
    <string name="details_hourly_change_text">За час</string>
    <string name="details_daily_change_text">За день</string>
    <string name="alarmcard_resistance_text">Сопротивление:</string>
    <string name="alarmcard_support_text">Поддержка:</string>
    <string name="alarmset_market_text">Биржа</string>
    <string name="alarmset_currency_text">Валюта</string>
    <string name="alarmset_resistance_level_text">Уровень сопротивления</string>
    <string name="alarmset_support_level_text">Уровень поддержки</string>
    <string name="alarmset_break_level_delay_text">Ожидание после пробития уровня</string>
    <string name="alarmset_set_alarm_text">Установить будильник</string>
</resources>
