<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentBottom="true"
    android:background="@color/homeItemColor"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/alarmset_market_text"
        android:textColor="@color/secondaryTextColor"
        android:textSize="10sp" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/market_spinner"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="left"
        android:textSize="13dp"
        app:ms_background_color="@color/backgroundColor"
        app:ms_dropdown_max_height="180dp"
        app:ms_text_color="@color/secondaryTextColor" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/alarmset_currency_text"
        android:textColor="@color/secondaryTextColor"
        android:textSize="10sp" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/pairs_spinner"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableBottom="@drawable/ms__arrow"
        android:gravity="left"
        android:textSize="13dp"
        android:theme="@style/AppTheme"
        app:ms_background_color="@color/backgroundColor"
        app:ms_dropdown_height="400dp"
        app:ms_dropdown_max_height="400dp"
        app:ms_text_color="@color/secondaryTextColor" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:text="@string/alarmset_resistance_level_text"
            android:textColor="@color/secondaryTextColor"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/resistanceLevelValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number|numberDecimal"
            android:textColor="@color/secondaryTextColor"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/alarmset_support_level_text"
            android:textColor="@color/secondaryTextColor"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/supportLevelValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColor="@color/secondaryTextColor"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/set_alarm_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:elevation="8dp"
            android:fadingEdge="horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onAlarmStartEvent"
            android:requiresFadingEdge="horizontal"
            android:text="Установить"
            android:textColor="@color/secondaryTextColor" />
    </LinearLayout>

    <!-- <android.support.design.widget.CoordinatorLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/myFAB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_marginBottom="16dp"
             android:layout_marginRight="16dp"
             android:clickable="true"
             android:src="@mipmap/ic_alarm_black_18dp"
             app:elevation="4dp" />
     </android.support.design.widget.CoordinatorLayout>
-->
</LinearLayout>